# stegtool

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
cmake/: coverage.cmake  memcheck.cmake  no-insource-builds.cmake  testing.cmake
src/: CMakeLists.txt  main.c  stegtool.c
src/img/: CMakeLists.txt  img.c  jpeg.c  png.c
src/img/include/img/: file.h  img.h  jpeg.h  png.h
src/include/: stegtool.h
test/img/: CMakeLists.txt  img_test.cc  jpeg_test.cc  png_test.cc
tests/: CMakeLists.txt
tests/img/: img_test.cc  jpeg_test.cc  png_test.cc  unsupported-format
tutorials/00_setup/: README.org  notes.org
tutorials/01_git/: README.org  notes.org
tutorials/02_intro/: README.org
tutorials/03_variables/: README.org
tutorials/04_control_flow/: README.org
tutorials/05_functions/: .#README.org  README.org
tutorials/06_pointers/: README.org
tutorials/07_structures/: README.org
tutorials/08_compilation/: README.org
tutorials/09_input_output/: README.org
tutorials/10_oop/: README.org
tutorials/10_oop/fixed/: container.c  container.h  test.c
tutorials/10_oop/public/: container.c  container.h  test.c
tutorials/10_oop/singleton/: container.c  container.h  test.c
tutorials/11_debugging/: README.org
tutorials/12_cmake/: README.org
